# fractals

./: Cargo.toml  README.md
src/: app.rs  color.rs  main.rs  render.rs  rules.rs  shared.rs  simd.rs  utils.rs  view.rs  viewport.rs
src/rules/: mod.rs  simd.rs
