[package]
name = "fractals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
minifb = "0.24.0"
itertools = "0.11.0"
once_cell = "1.19.0"
minifb_fonts = "0.1.3"
futures = { version = "0.3.28", features = ["thread-pool"] }
